Adding changes done to the system